--- a/package/NuGet.config
+++ b/package/NuGet.config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <clear/>
-    <add key="stackage" value="https://pkgs.dev.azure.com/acraven/_packaging/default/nuget/v3/index.json"/>
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="stackage" value="https://pkgs.dev.azure.com/acraven/_packaging/stackage/nuget/v3/index.json"/>
   </packageSources>
 </configuration>
