--- a/package/Stackage.Http.Tests/Stackage.Http.Tests.csproj
+++ b/package/Stackage.Http.Tests/Stackage.Http.Tests.csproj
@@ -6,18 +6,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FakeItEasy" Version="5.1.1" />
-    <PackageReference Include="Hornbill" Version="2.4.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="Shouldly" Version="3.0.2" />
-    <PackageReference Include="Stackage.Core" Version="1.0.0-preview003" />
+    <PackageReference Include="Stackage.Core" Version="1.0.0-preview005"/>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Stackage.Http\Stackage.Http.csproj" />
+    <PackageReference Include="FakeItEasy" Version="6.0.1"/>
+    <PackageReference Include="Hornbill" Version="2.6.2"/>
+    <PackageReference Include="Shouldly" Version="3.0.2"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0"/>
+    <PackageReference Include="NUnit" Version="3.12.0"/>
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Stackage.Http\Stackage.Http.csproj"/>
   </ItemGroup>
 </Project>
