--- a/package/Stackage.Http/Stackage.Http.csproj
+++ b/package/Stackage.Http/Stackage.Http.csproj
@@ -18,8 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
-    <PackageReference Include="Stackage.Core.Abstractions" Version="1.0.0-preview005" />
+    <PackageReference Include="Stackage.Core.Abstractions" Version="1.0.0-preview006"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3"/>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3"/>
   </ItemGroup>
 </Project>
