--- a/package/Stackage.Http/Stackage.Http.csproj
+++ b/package/Stackage.Http/Stackage.Http.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
+    <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
     <Product>Stackage.Http</Product>
     <Title>Stackage.Http</Title>
     <Description>Cross-cutting concerns for invoking services over HTTP</Description>
@@ -14,15 +16,17 @@
   <PropertyGroup>
     <PackageId>Stackage.Http</PackageId>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://dev.azure.com/acraven/stackage/_git/http</RepositoryUrl>
+    <RepositoryUrl>https://github.com/concilify/stackage-http-nuget</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Stackage.Core.Abstractions" Version="1.0.0-preview011" />
+    <PackageReference Include="Stackage.Core.Abstractions" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
   </ItemGroup>
 </Project>
