--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -1,3 +1,5 @@
+name: Release Preview Build
+
 on:
   push:
     tags:
@@ -9,14 +11,18 @@ jobs:
     timeout-minutes: 15
     env:
       DOTNET_NOLOGO: true
+
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+
     - name: Set VERSION
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+
     - name: Pack
       run: dotnet pack --configuration Release /p:Version=${VERSION} --output . package/Stackage.Http/Stackage.Http.csproj
+
     - name: Push
       run: dotnet nuget push Stackage.Http.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_PUSH_TOKEN}
       env:
-        NUGET_PUSH_TOKEN: ${{ secrets.NUGET_PUSH_TOKEN }}
+        NUGET_PUSH_TOKEN: ${{ secrets.STACKAGE_NUGET_PUSH_TOKEN }}
