--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,14 @@
+name: CI
+
 on:
   push:
     branches:
     - main
+    paths-ignore:
+    - README.md
   pull_request:
-    branches:
-    - main
+    paths-ignore:
+    - README.md
 
 jobs:
   build:
@@ -12,10 +16,13 @@ jobs:
     timeout-minutes: 15
     env:
       DOTNET_NOLOGO: true
+
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+
     - name: Pack
       run: dotnet pack --configuration Release -p:Version=0.0.0-ci --output . package/Stackage.Http/Stackage.Http.csproj
+
     - name: Test
       run: dotnet test --configuration Release package/Stackage.Http.Tests/Stackage.Http.Tests.csproj
